@@ -414,7 +414,7 @@ Player::Player(bool _cameraMode) : cameraMode(_cameraMode)
        }
    }
    
-   m_fThrowBalls=(GetRegIntWithDefault("Editor", "ThrowBallsAlwaysOn", 0)==1);
+   m_fThrowBalls = (GetRegIntWithDefault("Editor", "ThrowBallsAlwaysOn", 0)==1);
    m_DebugBallSize = GetRegIntWithDefault("Editor", "ThrowBallSize", 50);
 
    m_fShowFPS = false;
