@@ -716,6 +716,7 @@
 #define IDC_DN_LONGITUDE                490
 #define IDC_DN_LATITUDE                 491
 #define IDC_DISABLE_DWM                 492
+#define IDC_START_VP_FILE_DIALOG        493
 #define IDC_JOYLFLIPCOMBO               501
 #define IDC_JOYRFLIPCOMBO               502
 #define IDC_JOYPLUNGERCOMBO             503
