@@ -663,7 +663,7 @@ BEGIN
     CTEXT           "Paused",IDC_STATIC,7,7,64,10
 END
 
-IDD_EDITOR_OPTIONS DIALOGEX 0, 0, 185, 138
+IDD_EDITOR_OPTIONS DIALOGEX 0, 0, 185, 156
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Editor Options"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -672,19 +672,21 @@ BEGIN
     CONTROL         "&Draw Light Center Cross",IDC_DRAW_LIGHTCENTERS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,19,102,10
     CONTROL         "Auto-&Save Tables Every",IDC_AUTOSAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,33,93,10
     EDITTEXT        IDC_AUTOSAVE_MINUTES,102,32,25,12,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "Grid size",IDC_STATIC,117,63,29,8
-    EDITTEXT        IDC_GRID_SIZE,149,61,27,12,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,79,120,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,131,120,50,14
+    LTEXT           "Grid size",IDC_STATIC,117,64,29,8
+    EDITTEXT        IDC_GRID_SIZE,149,62,27,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,79,137,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,131,137,50,14
     LTEXT           "minutes",IDC_STATIC,132,33,25,8
     CONTROL         "Properties Menu floating (needs restart)",IDC_PROP_FLOAT_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,47,139,10
-    CONTROL         "Custom2",IDC_COLOR,"ColorControl",WS_TABSTOP,78,60,32,16
-    LTEXT           "Default Material Color",IDC_STATIC,7,64,68,8
+    CONTROL         "Custom2",IDC_COLOR,"ColorControl",WS_TABSTOP,78,61,32,16
+    LTEXT           "Default Material Color",IDC_STATIC,7,65,68,8
     GROUPBOX        "Throw Balls in Player",IDC_STATIC,3,82,178,31
     CONTROL         "Always On",IDC_THROW_BALLS_ALWAYS_ON_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,96,49,10
     LTEXT           "Ball size",IDC_STATIC,117,97,28,8
     EDITTEXT        IDC_THROW_BALLS_SIZE_EDIT,149,95,27,12,ES_AUTOHSCROLL
+    CONTROL         "Start VP with File Dialog open to directly play",IDC_START_VP_FILE_DIALOG,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,118,174,10
 END
 
 IDD_COLLECTDIALOG DIALOGEX 0, 0, 316, 167
@@ -2286,6 +2288,7 @@ BEGIN
 
     IDD_EDITOR_OPTIONS, DIALOG
     BEGIN
+        BOTTOMMARGIN, 138
     END
 
     IDD_COLLECTDIALOG, DIALOG
